# freeman

./: .gitignore  LICENSE  README.md
bfeber/: bfeber fixes.txt  freeman vs bfeber differences.txt
bfeber/Launcher/: GameMenu.qml  Launcher.qml  README.md  launcher.cpp  launcher.gd  main.cpp
bfeber/Launcher-Helper/: CMakeLists.txt  README.md  main.cpp
bfeber/Mod/: README.md  changes.txt
bfeber/Mod/game/hlvr/scripts/vscripts/: bindings.lua  flashlight.lua  gravity_gloves.lua  main_menu_exec.lua  multitool.lua  novr.lua  player_pos.lua  useextra.lua  version.lua  wristpockets.lua
bfeber/OLD (Pre-Launcher)/: bfeber fixes.txt
bfeber/OLD (Pre-Launcher)/scripts/vscripts/: flashlight.lua  novr.lua
bfeber/OLD (Pre-Launcher)/sounds/items/: halls_of_alyx.vsnd_c
bfeber/scripts/vscripts/: bindings.lua  flashlight.lua  novr.lua  player_pos.lua  useextra.lua
freeman/: gameinfo.gi  make-pak01.cmd  pak01_dir.vpk
freeman/cfg/: autoexec.cfg
pmein1 (OLD)/: README.md
